codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_footer_wrap.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                    
  问 题  1/2（ 未 回 答  2 个 ）                            
  Choose an option.                                 
                                                    
    1. Option 1  First choice.                      
  › 2. Option 2  Second choice.                     
    3. Option 3  Third choice.                      
                                                    
  Tab 添 加 备 注  | Enter 提 交 回 答                      
  Ctrl+N 下 一 个 问 题  | Esc 中 断
