codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_freeform.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
问 题  1/1                                                        
Goal                                                            
Share details.                                                  
+--------------------------------------------------------------+
|输 入 回 答 （ 可 选 ）                                               |
+--------------------------------------------------------------+
未 回 答 ： 1 | 将 按 跳 过 提 交                                         
↑/↓ 滚 动  | enter 下 一 题  | esc 中 断
