codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_scrolling_options.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
问 题  1/1                                                            
Next Step                                                           
What would you like to do next?                                     
( ) Discuss a code change (Recommended)  Walk through a plan and    
                                         edit code together.        
( ) Run tests                            Pick a crate and run its   
                                         tests.                     
( ) Review a diff                        Summarize or review current
备 注 ：    添 加 备 注 （ 可 选 ）                                            
选 项  4/5 | ↑/↓ 滚 动  | enter 下 一 题  | esc 中 断
